# spdx_cli

./: .build.yml  .bumpversion.cfg  .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Earthfile  README.md  mix.exs
.github/workflows/: main.yml
lib/: spdx_cli.ex
src/: cli.yaml  main.rs
test/: spdx_cli_test.exs
